# gcai

./: .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  README.md  example.env
backend/src/: auth.rs  azure_wrapper.rs  helpers.rs  main.rs  plugin_manager.rs
backend/src/api/: types.rs
backend/src/azure_openai/: mod.rs  types.rs  wrapper.rs
backend/src/azure_openai/completions/: types.rs
backend/src/azure_openai/extensions/: types.rs
backend/src/entities/: message.rs  mod.rs  text_completion_request.rs  text_completion_response.rs
backend/src/interface_adapters/controllers/: mod.rs  text_completion_controller.rs
backend/src/openapi_clients/azure_openai_client/: Cargo.toml  README.md
backend/src/openapi_clients/azure_openai_client/.openapi-generator/: FILES
backend/src/openapi_clients/openai_client/: Cargo.toml  README.md
backend/src/plugins/: mod.rs
backend/src/plugins/azure_openai_plugin/: client.rs  mappers.rs  mod.rs
backend/src/skills/: mod.rs  types.rs
backend/src/skills/find_author_title/: function.rs  mod.rs  types.rs  word_filter.rs
backend/src/skills/merge_pdf_metadata/: function.rs  mod.rs  types.rs
backend/src/use_cases/: mod.rs
backend/src/use_cases/interactors/: mod.rs  text_completion_interactor.rs
backend/src/use_cases/traits/: mod.rs  streaming_text_completion_service.rs  text_completion_service.rs
backend/src/v2api/: types.rs
backend/src/v2azure_openai/: types.rs  wrapper.rs
backend/src/v3_tensorzero/: wrapper.rs
backend/src/v3api/: types.rs
simple-frontend/: package-lock.json  (+4 more)
(+828 files in other folders)
